plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.5'
	id 'io.spring.dependency-management' version '1.1.0'
	id 'org.graalvm.buildtools.native' version '0.9.20'
}

group = 'com.acme'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

ext {
	set('springCloudVersion', "2022.0.2")
}

dependencies {
	implementation 'org.springframework.cloud:spring-cloud-stream'
	implementation 'org.springframework.pulsar:spring-pulsar-reactive-spring-boot-starter:0.2.0'
	implementation 'org.springframework.pulsar:spring-pulsar-spring-boot-starter:0.2.0'
	implementation 'org.springframework.pulsar:spring-pulsar-spring-cloud-stream-binder:0.2.0'
	implementation 'org.springframework.boot:spring-boot-starter-json'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'org.springframework.cloud:spring-cloud-stream-test-binder'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}

graalvmNative {
	binaries {
		main {
			buildArgs.add('--add-opens=java.base/java.lang=ALL-UNNAMED')
			buildArgs.add('--add-opens=java.base/java.util=ALL-UNNAMED')
			buildArgs.add('--add-opens=java.base/sun.net=ALL-UNNAMED')
		}
	}
}
